tests/fixtures/errors/invalid_preproc_endwhile_without_while.puml
@startuml
!endwhile
A -> B: one
@enduml
